--- a/cost_tracker.html
+++ b/cost_tracker.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="cost_styles.css">
     <div>
         <section id="Cost today" name="Cost today">Please enter how much you spent in Canadian Dollars<section><input type="number" placeholder="$0.00">
+        <section id="Type of cost" name="Type of cost">What did you spend it on?</section><input type="" placeholder="E.g Groceries">
     </div> <br>
     <div>
         <button type="submit">Add cost</button>
