--- a/cost_report.html
+++ b/cost_report.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+    <link type="stylesheet" href="report.css">
+    <script src="cost_limit.js"></script>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="report.css">
     <header id="ReportTime"></header>
     <div>
-        <h1 id="reporth1"></h1>
-        <p id="reportbody"></p>
+        <h2 id="reporth2"></h2>
+        <p id="reportp"></p>
     </div>
+    <h1 id="monthreport"></h1>
     <div>
-
+        <h2 id="monthreporth2"></h2>
+        <p id="monthreportp" onload="report()"></p>
     </div>
 </html>
