--- a/cost_tracker.html
+++ b/cost_tracker.html
@@ -2,23 +2,21 @@
 <html lang="en">
     <meta charset="UTF-8">
     <link rel="stylesheet" href="cost_styles.css">
+    <script src="cost_limit.js"></script>
     <header>Manual Cost Tracking Page</header>
     <form id="form" onsubmit="return false";>
         <section id="Cost today">How much did you spend today?</section><input type="number" id="Cost today" placeholder="$0.00"><br>
-        <section id="costCategory">What did you spend it on?</section><input type="radio" id="Groceries" name="costCategory" value="Groceries">
-        <label for="Groceries">Groceries</label><br>
-        <input type="radio" id="Food" name="costCategory" value="Food">
-        <label for="Food">Food (Restuarant or Fast food including delivery)</label><br>
-        <input type="radio" id="Clothes" name="costCategory" value="Clothes">
-        <label for="Clothes">Clothing</label><br>
-        <input type="radio" id="Entertainment" name="costCategory"  value="Entertainment">
-        <label for="Entertainment">Entertainment (Games, Movies, etc)</label><br>
-        <input type="radio" id="rent" name="costCategory" value="rent">
-        <label for="rent">Rent / Shelter costs</label><br>
-        <input type="radio" id="Transport" name="costCategory" value="Transport">
-        <label for="Transport">Transport (Gas fees, bus fees)</label><br>
-        <input type="radio" id="Other" name="costCategory" value="Other">
-        <label for="Other">Other costs</label><br>
+        <section id="costCategory">What did you spend it on?</section>
+        <select name="costCategory">
+            <option value="Groceries" id="Groceries">Groceries</option>
+            <option value="Food" id="Food">Food (Restuarant or Fast food)</option>
+            <option value="Clothes" id="Clothes">Clothing</option>
+            <option value="Entertainment" id="Entertainment">Entertainment (Games, Movies, etc)</option>
+            <option value="Rent" id="Rent">Rent / Shelter costs</option>
+            <option value="Transport" id="Transport">Transpot (Gas fees, bus fees)</option>
+            <option value="Other" id="Other">Other</option>
+        </select><br>
         <br><input type="submit" id="update_daily_costs" onclick="costs()" value="Update daily cost" onclick="">
-    </form>
+    </form><br><br>
+    <button style="font-family: 'Times New Roman', Times, serif;font-weight: bold; font-size: 16px;" onclick="reportconfirm()">Generate Report</button>
 </html>
