--- a/cost_tracker.html
+++ b/cost_tracker.html
@@ -4,19 +4,31 @@
     <link rel="stylesheet" href="cost_styles.css">
     <script src="cost_limit.js"></script>
     <header>Manual Cost Tracking Page</header>
-    <form id="form" onsubmit="return false";>
-        <section id="Cost today">How much did you spend today?</section><input type="number" id="Cost today" placeholder="$0.00"><br>
-        <section id="costCategory">What did you spend it on?</section>
-        <select name="costCategory">
-            <option value="Groceries" id="Groceries">Groceries</option>
-            <option value="Food" id="Food">Food (Restuarant or Fast food)</option>
-            <option value="Clothes" id="Clothes">Clothing</option>
-            <option value="Entertainment" id="Entertainment">Entertainment (Games, Movies, etc)</option>
-            <option value="Rent" id="Rent">Rent / Shelter costs</option>
-            <option value="Transport" id="Transport">Transpot (Gas fees, bus fees)</option>
-            <option value="Other" id="Other">Other</option>
-        </select><br>
-        <br><input type="submit" id="update_daily_costs" onclick="costs()" value="Update daily cost" onclick="">
-    </form><br><br>
-    <button style="font-family: 'Times New Roman', Times, serif;font-weight: bold; font-size: 16px;" onclick="reportconfirm()">Generate Report</button>
+    <body>
+        <div class="sidebar">
+            <a href="index.html">Home</a>
+            <a class="active" href="cost_tracker.html">Cost Tracking</a>
+            <a href="cost_limit_setter.html">Limiting, Savings, and Goals</a>
+            <a href="cost_report.html">Generate Report</a>
+        </div>
+        <div class="content">
+            <form id="form";>
+                <section id="Cost today">How much did you spend today?</section><input type="number" id="Cost today" placeholder="$0.00"><br><br>
+                <section id="costCategory">What did you spend it on?</section>
+                <select name="costCategory">
+                    <option value="Groceries" id="Groceries">Groceries</option>
+                    <option value="Food" id="Food">Food (Restuarant or Fast food)</option>
+                    <option value="Clothes" id="Clothes">Clothing</option>
+                    <option value="Entertainment" id="Entertainment">Entertainment (Games, Movies, etc)</option>
+                    <option value="Rent" id="Rent">Rent / Shelter costs</option>
+                    <option value="Transport" id="Transport">Transpot (Gas fees, bus fees)</option>
+                    <option value="Other" id="Other">Other</option>
+                </select><br><br>
+                <br><button id="update_daily_costs">Update Daily Cost</button>
+            </form><br><br><br>
+            <form>
+                <button style="font-family: 'Times New Roman', Times, serif;font-weight: bold; font-size: 2em; text-align: center;" onclick="reportconfirm()">Generate Report</button>
+            </form>
+        </div>
+    </body>
 </html>
