--- a/about.html
+++ b/about.html
@@ -8,9 +8,19 @@
             <a href="index.html">Home</a>
             <a class="active" href="about.html">About us</a>
             <a href="cost_tracker.html">Cost Tracking</a>
+            <a href="cost_limit_setter.html">Limiting, Savings, and Goals</a>
+            <a href="cost_report.html">Generate Report</a>
         </div>
-        <div class="content">
-
+        <div class="aboutContent">
+            <div class="abtimg">
+                <img src="Logo_York_University.svg.png" height="200">
+            </div>
+            <div class="text">
+                <h3>About us</h3>
+                <p>We are a group of students currently studying at York University for the program Computer Science of Software Development located at the Markham campus. We decided that in order to help individuals similar to us, we needed to create a financial assistance 
+                    website. The website helps people who may be busy manage their finances easily by tracking costs, income, and lets the user sets cost limits that display warnings when the tracked costs approach the limit. This is a collaborative project tht has been worked on by: Hojoon, Maurice, and Selim.
+                </p>
+            </div>
         </div>
     </body>
 </html>
