--- a/cost_limit_setter.html
+++ b/cost_limit_setter.html
@@ -3,10 +3,12 @@
     <meta charset="UTF-8">
     <script src="cost_limit.js"></script>
     <link rel="stylesheet" href="cost_styles.css">
+    <title>Limits, Goals, and Income</title>
     <header>Cost Limits, Savings goals, and Wage setting</header>
     <body>
         <div class="sidebar">
             <a href="index.html">Home</a>
+            <a href="about.html">About us</a>
             <a href="cost_tracker.html">Cost Tracking</a>
             <a class="active" href="cost_limit_setter.html">Limiting, Savings, and Goals</a>
             <a href="cost_report.html">Generate Report</a>
