--- a/cost_report.html
+++ b/cost_report.html
@@ -14,6 +14,6 @@
         <p id="monthreportp"></p>
     </div>
     <script src="cost_limit.js">
-        window.addEventListener("DOMContentLoaded", report());
+        window.addEventListener("load", report());
     </script>
 </html>
