--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <body>
         <div class="sidebar">
             <a class="active" href="index.html">Home</a>
+            <a href="about.html">About us</a>
             <a href="cost_tracker.html">Cost Tracking</a>
             <a href="cost_limit_setter.html">Limiting, Savings, and Goals</a>
             <a href="cost_report.html">Generate Report</a> 
