--- a/about.html
+++ b/about.html
@@ -9,11 +9,11 @@
             <a class="active" href="about.html">About us</a>
             <a href="cost_tracker.html">Cost Tracking</a>
             <a href="cost_limit_setter.html">Limiting, Savings, and Goals</a>
-            <a href="cost_report.html">Generate Report</a>
+            <a onclick="reportconfirm()">Generate Report</a>
         </div>
         <div class="aboutContent">
             <div class="abtimg">
-                <img src="Logo_York_University.svg.png" height="200">
+                <img src="Logo_York_University.svg.png" alt="Yorku Logo" height="200">
             </div>
             <div class="text">
                 <h3>About us</h3>
@@ -22,5 +22,6 @@
                 </p>
             </div>
         </div>
+        <script defer src="cost_limit.js"></script>
     </body>
 </html>
