--- a/index.html
+++ b/index.html
@@ -10,10 +10,16 @@
             <a href="about.html">About us</a>
             <a href="cost_tracker.html">Cost Tracking</a>
             <a href="cost_limit_setter.html">Limiting, Savings, and Goals</a>
-            <a href="cost_report.html">Generate Report</a> 
+            <a onclick="reportconfirm()">Generate Report</a> 
         </div>
-        <div class="content">
-            
+        <div class="homeContent">
+            <div class="homeimg">
+                <img src="6475938.png" height="300px">
+            </div>
+            <div class="text">
+                <p style="margin-top: 100px; margin-left: 50px; font-size: 1.5em;">We help you manage your finances! Navigate to the sidebar where you will find our services! We offer assistance in cost tracking, cost limiting, savings reminders, and financial goal tracking! Press the generate report button on the sidebar to generate a report so far of your progress.</p>
+            </div>
         </div>
+        <script defer src="cost_limit.js"></script>
     </body>
 </html>
